Benutzerkontrolle fixed (flags, add, update)