@@ -3,7 +3,9 @@ package com.mci.swe.services;
 import aj.org.objectweb.asm.TypeReference;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
+
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import com.mci.swe.models.BenutzerModel;
@@ -24,36 +26,38 @@ import org.springframework.security.core.userdetails.User;
 public class BenutzerService {
       public  List<BenutzerModel> users = new ArrayList<>();
 
-        public List<BenutzerModel> getAllUsers() {
-              try {
-            // API-Request vorbereiten
+      public List<BenutzerModel> getAllUsers() {
+        try {
             URI uri = new URI("https://nx0u5kutgk.execute-api.eu-central-1.amazonaws.com/PROD/Users");
             HttpClient client = HttpClient.newHttpClient();
-            var request = HttpRequest.newBuilder()
-                    .uri(uri)
-                    .GET()
-                    .build();
-
-            // API-Abfrage durchführen
+            HttpRequest request = HttpRequest.newBuilder()
+                .uri(uri)
+                .GET()
+                .build();
+    
             HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
             if (response.statusCode() == 200) {
-                ObjectMapper mapper = new ObjectMapper();
-                mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, true);
-
-                // JSON → Array → Liste
-                BenutzerModel[] benutzerArray = mapper.readValue(response.body(), BenutzerModel[].class);
-                List<BenutzerModel> benutzerListe = List.of(benutzerArray);
-                users = benutzerListe;
+                ObjectMapper mapper = new ObjectMapper()
+                    .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, true);
+    
+                // Deserialisieren
+                BenutzerModel[] benutzerArray =
+                    mapper.readValue(response.body(), BenutzerModel[].class);
+    
+                // mutable ArrayList statt List.of(...)
+                List<BenutzerModel> benutzerListe =
+                    new ArrayList<>(Arrays.asList(benutzerArray));
+    
+                // users updaten
+                users.clear();
+                users.addAll(benutzerListe);
             } else {
-                System.out.println("Benutzer erfolgreich aktualisiert!");
+                System.out.println("Fehler beim Laden der Benutzer: HTTP " + response.statusCode());
             }
-
         } catch (Exception e) {
             e.printStackTrace();
         }
-              
-    return users;
+        return users;
     }
 
 
@@ -66,9 +70,9 @@ public class BenutzerService {
                 payload.put("email", user.getEmail());
                 payload.put("passwort", user.getPassword());
                 payload.put("firma",user.getFirma());
-                payload.put("istAdmin", user.istAdmin);       
-                payload.put("istMitarbeiter", user.istMitarbeiter);  
-                payload.put("istKunde", user.istKunde);      
+                payload.put("istAdmin", user.getIstAdmin());       
+                payload.put("istMitarbeiter", user.getIstMitarbeiter());  
+                payload.put("istKunde", user.getIstKunde());      
 
                 // JSON serialisieren
                 ObjectMapper mapper = new ObjectMapper();
@@ -86,8 +90,11 @@ public class BenutzerService {
                 // Anfrage senden
                 HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
+                System.out.println(request);
+
                 if (response.statusCode() == 201) {
                     System.out.println("Benutzer erfolgreich aktualisiert!");
+                    System.out.println(response);
                 } else {
                     System.out.println("Benutzer fehler aktualisiert!");
                 }
@@ -132,9 +139,9 @@ public class BenutzerService {
                 payload.put("email", benutzer.getEmail());
                 payload.put("passwort", benutzer.getPassword());
                 payload.put("firma",benutzer.getFirma());
-                payload.put("istAdmin", benutzer.istAdmin);       
-                payload.put("istMitarbeiter", benutzer.istMitarbeiter);  
-                payload.put("istKunde", benutzer.istKunde);      
+                payload.put("istAdmin", benutzer.getIstAdmin());       
+                payload.put("istMitarbeiter", benutzer.getIstMitarbeiter());  
+                payload.put("istKunde", benutzer.getIstKunde());      
     
                 ObjectMapper mapper = new ObjectMapper();
                 String json = mapper.writeValueAsString(payload);
